Fix Javadoc issues.