@@ -50,4 +50,94 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <reportSets>
+                    <reportSet><!-- by default, id = "default" -->
+                        <reports><!-- select non-aggregate reports -->
+                            <report>javadoc</report>
+                            <report>test-javadoc</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+                <configuration>
+                    <show>${javadoc.show}</show>
+                    <doctitle>${javadoc.title}</doctitle>
+                    <header>${javadoc.header}</header>
+                    <overview>${project.build.directory}/classes/javadoc/overview.html</overview>
+                    <docfilessubdirs>true</docfilessubdirs>
+                    <source>${javadoc.source.version}</source>
+                    <links>
+                        <link>${javadoc.link.url.jdk}</link>
+                    </links>
+                    <linksource>${javadoc.linksource}</linksource>
+                    <removeUnknownThrows>false</removeUnknownThrows>
+                    <minmemory>128m</minmemory>
+                    <maxmemory>1g</maxmemory>
+                    <additionalOptions>
+                        --enable-preview
+                    </additionalOptions>
+                    <bottom>
+                        Copyright © {currentYear} Bradley Willcott. All rights reserved.
+                    </bottom>
+                    <!--<outputDirectory>${javadoc.outputDirectory}</outputDirectory>-->
+                    <tags>
+                        <tag>
+                            <name>note</name>
+                            <placement>a</placement>
+                            <head>Note:</head>
+                        </tag>
+                        <tag>
+                            <name>apiNote</name>
+                            <placement>a</placement>
+                            <head>API Note:</head>
+                        </tag>
+                        <tag>
+                            <name>implSpec</name>
+                            <placement>a</placement>
+                            <head>Implementation Requirements:</head>
+                        </tag>
+                        <tag>
+                            <name>implNote</name>
+                            <placement>a</placement>
+                            <head>Implementation Note:</head>
+                        </tag>
+                        <tag>
+                            <name>param</name>
+                        </tag>
+                        <tag>
+                            <name>return</name>
+                        </tag>
+                        <tag>
+                            <name>throws</name>
+                        </tag>
+                        <tag>
+                            <name>since</name>
+                        </tag>
+                        <tag>
+                            <name>version</name>
+                        </tag>
+                        <tag>
+                            <name>author</name>
+                        </tag>
+                        <tag>
+                            <name>serialData</name>
+                        </tag>
+                        <tag>
+                            <name>see</name>
+                        </tag>
+                        <tag>
+                            <name>todo</name>
+                            <placement>a</placement>
+                            <head>To Do:</head>
+                        </tag>
+                    </tags>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
